# Core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: changelog.md  configuration.md  contributing.md  getting-started.md  integrations.md  usage.md
docs/rules/: access-control.md  storage.md
soroban-guard-core/: Cargo.toml  README.md
soroban-guard-core/benches/: benchmarks.rs
soroban-guard-core/docs/: architecture.md  integrations.md  usage.md
soroban-guard-core/docs/rules/: overflow.md  reentrancy.md
soroban-guard-core/src/: config.rs  error.rs  lib.rs  main.rs  scoring.rs
soroban-guard-core/src/analysis/: access_control.rs  mod.rs  overflow.rs  reentrancy.rs  storage.rs
soroban-guard-core/src/parser/: ast.rs  mod.rs  patterns.rs  visitors.rs
soroban-guard-core/src/report/: finding.rs  mod.rs  output.rs
soroban-guard-core/tests/: access_control_tests.rs  cli_tests.rs  edge_case_test.rs  integration_test.rs  overflow_tests.rs  parser_tests.rs  reentrancy_tests.rs  storage_tests.rs
soroban-guard-core/tests/fixtures/: access_control_bad.rs  reentrancy_guarded.rs  reentrancy_vulnerable.rs  storage_bad.rs
soroban-guard-core/tests/fixtures/contracts/: lending_pool.rs  nft_marketplace.rs
soroban-guard-core/tests/fixtures/expected/: nft_marketplace.json  vault_safe.json
src/: config.rs  error.rs  main.rs  scoring.rs
src/analysis/: access_control.rs  mod.rs  overflow.rs  reentrancy.rs  storage.rs
src/parser/: ast.rs  (+3 more)
tests/: cli_tests.rs  integration_test.rs  overflow_tests.rs  property_test.rs  regression_test.rs
(+13 files in other folders)
