[package]
name = "soroban-guard-core"
version = "0.1.0"
edition = "2021"
description = "Static analysis and security auditing toolchain for Soroban smart contracts"

[lib]
name = "soroban_guard_core"
path = "src/lib.rs"

[[bin]]
name = "soroban-guard-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
rayon = "1"
colored = "2"
thiserror = "1"
glob = "0.3"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
